my own modifications

--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -18,7 +18,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url("../assets/signin1.jpg");
+    //background: url("../assets/signin1.jpg");
+    //background-color: #ffffff;
     background-size: cover;
     background-repeat: no-repeat;
     img {
@@ -45,7 +46,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #ffffff;
+    //background: #ffffff;
     p {
       font-weight: 500;
       font-size: 30px;
