--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -1,5 +1,5 @@
 .signin {
-  height: 100vh;
+  // height: 100vh;
   background: linear-gradient(
       0deg,
       rgba(234, 234, 234, 0.5),
@@ -8,78 +8,121 @@
     url("../assets/loginbackground.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  .top-signup {
-    padding: 30px 50px;
+  .inner-div {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    //background: url("../assets/signin1.jpg");
-    //background-color: #ffffff;
-    background-size: cover;
-    background-repeat: no-repeat;
-    img {
-      height: 40px;
-      margin-bottom: 20px;
-      margin-top: 10px;
-    }
-    p {
-      font-weight: bold;
-      font-size: 34px;
-      margin-bottom: 20px;
-    }
-    input {
-      padding: 15px;
-      width: 344px;
-      border-radius: 20px;
-      margin-bottom: 10px;
-      border: 1px solid #000000;
-      outline: none;
-    }
-  }
-  .bottom-signup {
-    padding: 30px 50px;
-    display: flex;
+    justify-content: center;
     flex-direction: column;
-    align-items: center;
-    //background: #ffffff;
-    p {
-      font-weight: 500;
-      font-size: 30px;
-      margin-bottom: 10px;
-    }
-    .social-login {
-      margin-bottom: 10px;
+    .top-signup {
+      padding: 30px 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      //background: url("../assets/signin1.jpg");
+      //background-color: #ffffff;
+      background-size: cover;
+      background-repeat: no-repeat;
       img {
-        height: 50px;
-        margin-right: 10px;
+        height: 40px;
+        margin-bottom: 20px;
+        margin-top: 10px;
+      }
+      p {
+        font-weight: bold;
+        font-size: 34px;
+        margin-bottom: 20px;
+      }
+      .username, .password, .fullname, .address, .craft, .price, .language, .description {
+        padding: 15px;
+        width: 344px;
+        border-radius: 20px;
+        margin-bottom: 10px;
+        border: 1px solid #000000;
+        outline: none;
+      }
+      .error-msg {
+        color: red;
+        font-size: unset;
+        font-weight: unset;
+        font-size: 14px;
+        margin-bottom: 10px;
+      }
+      .radio-group {
+        margin: 25px 0;
+        width: 344px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        .form-radio-input {
+
+        }
+        .radio-button {
+          .radio-button-label {
+            padding: 20px 35px;
+            border: 1px solid #87c5ff;
+            border-radius: 10px;
+            &:hover {
+              cursor: pointer;
+            }
+            .form-radio-input {
+              margin: 0 5px;
+            }
+          }
+          .radio-button-label_selected {
+            padding: 20px 35px;
+            border: 1px solid #125af3;
+            border-radius: 10px;
+            &:hover {
+              cursor: pointer;
+            }
+            .form-radio-input {
+              margin: 0 5px;
+            }
+          }
+        }
       }
     }
-    button {
-      cursor: pointer;
-      padding: 10px;
-      font-weight: bold;
-      font-size: 30px;
-      border: none;
-      background: linear-gradient(
-        267.02deg,
-        rgba(106, 166, 238, 0.74) 35.23%,
-        rgba(160, 198, 243, 0.88) 65.1%
-      );
-      border-radius: 25px;
-      width: 344px;
-      margin-bottom: 10px;
-    }
-    .sigin-route {
-      font-weight: normal;
-      font-size: 18px;
-      span {
-        font-weight: bold;
+    .bottom-signup {
+      padding: 30px 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      //background: #ffffff;
+      p {
+        font-weight: 500;
+        font-size: 30px;
+        margin-bottom: 10px;
+      }
+      .social-login {
+        margin-bottom: 10px;
+        img {
+          height: 50px;
+          margin-right: 10px;
+        }
+      }
+      button {
         cursor: pointer;
+        padding: 10px;
+        font-weight: bold;
+        font-size: 30px;
+        border: none;
+        background: linear-gradient(
+          267.02deg,
+          rgba(106, 166, 238, 0.74) 35.23%,
+          rgba(160, 198, 243, 0.88) 65.1%
+        );
+        border-radius: 25px;
+        width: 344px;
+        margin-bottom: 10px;
+      }
+      .sigin-route {
+        font-weight: normal;
+        font-size: 18px;
+        span {
+          font-weight: bold;
+          cursor: pointer;
+        }
       }
     }
   }
