--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -9,6 +9,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   .inner-div {
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
