--- a/src/sass/_userprofile.scss
+++ b/src/sass/_userprofile.scss
@@ -107,6 +107,7 @@
               font-weight: bold;
               font-size: 16px;
               color: #000000;
+              cursor: pointer;
             }
           }
         }
@@ -168,6 +169,7 @@
           line-height: 35px;
           color: #000000;
           border: none;
+          cursor: pointer;
         }
       }
     }
