--- a/src/sass/_userprofile.scss
+++ b/src/sass/_userprofile.scss
@@ -179,3 +179,34 @@
     }
   }
 }
+.modal-h1{
+  text-align: center;
+  margin-top: 20px;
+}
+.modal-input{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 50px;
+  font-size: 24px;
+  padding-left: 10px;
+}
+.modal-close{
+  font-size: 18px;
+  position: absolute;
+  bottom: 5%;
+  left: 5%;
+  padding: 10px 7px;
+
+
+}
+.modal-save{
+  font-size: 18px;
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  padding: 10px 7px;
+
+}
