--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -63,7 +63,7 @@
       cursor: pointer;
       padding: 10px;
       font-weight: bold;
-      font-size: 30px;
+      font-size: 20px;
       border: none;
       background: linear-gradient(
         267.02deg,
@@ -71,7 +71,7 @@
         rgba(160, 198, 243, 0.88) 65.1%
       );
       border-radius: 25px;
-      width: 344px;
+      // width: 344px;
       margin-bottom: 10px;
     }
     .sigin-route {
