Fixed little design issues

--- a/src/sass/_filter.scss
+++ b/src/sass/_filter.scss
@@ -44,6 +44,7 @@
         padding: 20px 30px;
         align-items: center;
         margin-bottom: 40px;
+        cursor: pointer;
         .value {
           .name {
             font-weight: bold;
