--- a/src/sass/_filter.scss
+++ b/src/sass/_filter.scss
@@ -52,7 +52,7 @@
             color: #000000;
             margin-bottom: 10px;
           }
-          .gender {
+          .craft {
             font-weight: normal;
             font-size: 14px;
             color: #000000;
