--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -68,8 +68,11 @@
         font-size: 25px;
         line-height: 40px;
         color: #fdf5f5;
-        margin-right: 10px;
+        margin-right: 80px;
         text-align: left;
+      }
+      .civil{
+        margin-left: 250px;
       }
     }
   }
